--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,16 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "creativeorange/gravatar": "^1.0",
+        "laravel-lang/attributes": "^2.11",
+        "laravel-lang/common": "^6.4",
+        "laravel-lang/lang": "^15.11",
+        "laravel-lang/publisher": "^16.4",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.14",
         "fakerphp/faker": "^1.23",
         "laravel/pail": "^1.1",
         "laravel/pint": "^1.13",
