--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,13 @@
-APP_NAME=Laravel
+APP_NAME="Tech Horizons"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:yVVOS702FhD8YUDXV8RBgcfdHbRGoHnZTrFk5P9T9cg=
 APP_DEBUG=true
-APP_TIMEZONE=UTC
+APP_TIMEZONE=Africa/Casablanca
 APP_URL=http://localhost
 
-APP_LOCALE=en
+APP_LOCALE=fr
 APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
+APP_FAKER_LOCALE=fr_FR
 
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
@@ -35,7 +35,7 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 
 BROADCAST_CONNECTION=log
-FILESYSTEM_DISK=local
+FILESYSTEM_DISK=public
 QUEUE_CONNECTION=database
 
 CACHE_STORE=database
